# dde-cooperation

./: .gitignore  CMakeLists.txt  clean_build.bat  workflow_msvc_build.bat
modules/sslconf/: CMakeLists.txt  String.cpp  String.h  sslcertconf.cpp
src/: CMakeLists.txt  data-transfer-translate.sh  dde-cooperation-translate.sh
src/apps/: CMakeLists.txt  config.h.in
src/apps/daemon/: CMakeLists.txt  main.cpp
src/apps/daemon/service/: dde-cooperation-daemon.desktop  dde-cooperation-daemon.service
src/apps/data-transfer/: CMakeLists.txt  main.cpp  type_defines.h
src/apps/data-transfer/res/win/: main.vbs
src/apps/dde-cooperation/: CMakeLists.txt  main.cpp
src/apps/dde-cooperation-transfer/: CMakeLists.txt  commandparser.cpp  main.cpp
src/apps/dde-cooperation/res/win/: main.vbs
src/apps/launcher/: CMakeLists.txt  asioservice.cpp  main.cpp
src/common/: commonutils.cpp  commonutils.h  constant.h  log.h  logger.cpp  logger.h  qtcompat.h
src/compat/apps/: CMakeLists.txt  config.h.in
src/compat/apps/daemon/: CMakeLists.txt  main.cpp
src/compat/common/: commonutils.cpp  constant.h
src/compat/framework/: CMakeLists.txt
src/compat/plugins/daemon/core/: CMakeLists.txt  daemoncoreplugin.cpp
src/configs/crypt/: cert.h
src/configs/settings/: settings.cpp
src/filesync/: CMakeLists.txt  compressutil.cpp  compressutil.h  fileclient.cpp  fileclient.h  fileserver.cpp  fileserver.h  syncstatus.h  tokencache.cpp  tokencache.h  webbinder.cpp
src/framework/lifecycle/private/: pluginmanager_p.cpp
src/ipc/proto/: chan.h  comstruct.h
src/launcher/: CMakeLists.txt  asioservice.h  main.cpp
src/lib/: CMakeLists.txt
src/lib/common/: CMakeLists.txt
src/lib/common/httpweb/: CMakeLists.txt  fileclient.cpp  fileclient.h  fileserver.cpp  fileserver.h  syncstatus.h  tokencache.cpp  tokencache.h  webbinder.cpp  webbinder.h
src/lib/common/manager/: CMakeLists.txt  filesizecounter.cpp  filesizecounter.h  sessionmanager.cpp  sessionmanager.h  sessionproto.h  sessionworker.cpp  sessionworker.h  transferworker.cpp  transferworker.h
src/lib/common/proto/: CMakeLists.txt
src/lib/common/session/: protoclient.cpp  protoclient.h  protoendpoint.h  protoserver.cpp  protoserver.h  session.h
src/lib/cooperation/: CMakeLists.txt  libvnc.cmake
src/lib/cooperation/core/: CMakeLists.txt  cooperationcoreplugin.cpp  cooperationcoreplugin.h  global_defines.h
src/lib/cooperation/core/cooperation/: cooperationmanager.cpp  cooperationmanager_p.h
src/lib/cooperation/core/discover/: deviceinfo.cpp  deviceinfo.h  deviceinfo_p.h  discovercontroller.cpp  discovercontroller.h  discovercontroller_p.h
src/lib/cooperation/core/discovercontroller/: discovercontroller.cpp  discovercontroller.h
src/lib/cooperation/core/gui/: mainwindow.cpp  mainwindow.h  mainwindow_p.h
src/lib/cooperation/core/maincontroller/: maincontroller.cpp
src/lib/cooperation/core/net/: compatwrapper.cpp  cooconstrants.h  networkutil.cpp  networkutil.h  networkutill_p.h  noticeutil.cpp  noticeutil.h  transferwrapper.cpp
src/lib/cooperation/core/share/: cooconfig.cpp  cooconfig.h  sharecooperationservice.cpp  sharecooperationservice.h  sharecooperationservicemanager.cpp  sharecooperationservicemanager.h
src/lib/cooperation/core/sharemanager/: sharecooperationservice.cpp  sharecooperationservice.h
src/lib/cooperation/core/transfer/: transferhelper.cpp  transferhelper.h
src/lib/cooperation/core/utils/: cooperationutil.cpp  cooperationutil.h  cooperationutil_p.h  historymanager.cpp  historymanager.h
src/lib/cooperation/dfmplugin/: CMakeLists.txt
src/lib/cooperation/transfer/: CMakeLists.txt  transferplugin.cpp
src/lib/cooperation/transfer/helper/: transferhelper.cpp
src/lib/data-transfer/core/: CMakeLists.txt  datatransfercoreplugin.cpp  datatransfercoreplugin.h
src/lib/data-transfer/core/gui/: mainwindow_p.h
src/lib/data-transfer/core/net/: compatwrapper.cpp  compatwrapper_p.h  networkutil.cpp  networkutil.h  networkutill_p.h  protoconstants.h
src/lib/data-transfer/core/utils/: protoconstants.h  settinghepler.cpp  transferhepler.h  transferutil.cpp  transferutil.h  transferworker.cpp  transferworker.h
src/manager/: sessionmanager.cpp  sessionmanager.h  sessionproto.h  sessionworker.cpp  sessionworker.h  transferworker.cpp  transferworker.h
src/plugins/: CMakeLists.txt
src/plugins/cooperation/: CMakeLists.txt
src/plugins/cooperation/core/: CMakeLists.txt  cooperationcoreplugin.cpp  global_defines.h
src/plugins/cooperation/core/cooperation/: cooperationmanager.cpp  cooperationmanager.h  cooperationmanager_p.h
src/plugins/cooperation/core/discover/: discovercontroller.cpp  discovercontroller.h  discovercontroller_p.h
src/plugins/cooperation/core/gui/: mainwindow.cpp  mainwindow.h
src/plugins/cooperation/core/maincontroller/: maincontroller.cpp  maincontroller.h
src/plugins/cooperation/core/proxy/: cooperationproxy.cpp  cooperationproxy.h
src/plugins/cooperation/core/share/: cooconstrants.h
src/plugins/cooperation/core/transfer/: transferhelper.cpp  transferhelper.h  transferhelper_p.h
src/plugins/cooperation/core/utils/: cooperationguihelper.cpp  cooperationguihelper.h  cooperationutil.cpp  cooperationutil.h  cooperationutil_p.h  historymanager.cpp  sortfilterworker.cpp
src/plugins/cooperation/daemon/: CMakeLists.txt
src/plugins/cooperation/daemon/maincontroller/: maincontroller.cpp
src/plugins/cooperation/daemon/utils/: cooperationutil.cpp  (+2 more)
src/plugins/cooperation/include/: cooconstrants.h
src/plugins/cooperation/share/: cooconstrants.h
src/plugins/daemon/core/: CMakeLists.txt  daemoncoreplugin.cpp
src/plugins/data-transfer/core/: CMakeLists.txt  datatransfercoreplugin.cpp
src/proto/: CMakeLists.txt  message.fbe  proto.cpp  proto.h  proto_final_models.cpp  proto_final_models.h  proto_final_protocol.cpp  proto_final_protocol.h  proto_models.cpp  proto_models.h  proto_protocol.cpp  proto_protocol.h
src/session/: CMakeLists.txt  protoclient.cpp  protoclient.h  protoserver.cpp  protoserver.h  session.h
src/singleton/: singleapplication.cpp  singleapplication.h
(+317 files in other folders)
